@@ -4,6 +4,9 @@ version 2.5.6 (??/??/2009):
 	IRC:
 	* Correctly handle WHOIS for users who are joined to a large number of
 	  channels.
+	* Notify the user if a /nick command fails, rather than trying
+	  fallback nicks.
+	
 
 version 2.5.5 (03/01/2009):
 	libpurple:
